# espd_gost_19

./: .gitignore  CMakeLists.txt  README.md  all.tex  annotation.tex  attachment.tex  bibliography.bib  document.tex  espd.cls  lit.bib  main.tex  section_1.tex  section_2.tex  аббревиатуры.tex  аннотация.tex  оформление_иллюстраций.tex  оформление_листингов.tex  оформление_перечислений.tex  оформление_разделов.tex  оформление_таблиц.tex  оформление_формул.tex  приложение.tex  приложение_1.tex  приложение_2.tex  термины.tex
document/: аббревиатуры.tex  оформление_иллюстраций.tex  оформление_разделов.tex  оформление_таблиц.tex  оформление_формул.tex  приложение.tex  приложение_1.tex  приложение_2.tex  термины.tex
